testsuite/tests/typecheck/should_fail/T22560_fail_d.stderr

T22560_fail_d.hs:5:1: error: [GHC-58589]
    Illegal invisible type variable binder: @k
    Suggested fix: Perhaps you intended to use TypeAbstractions
